<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment"
>
    <fragment
        android:id="@+id/RegistrationFragment"
        android:name="hu.unimiskolc.iit.mobile.carnotify.fragment.RegistrationFragment"
        android:label="@string/registration_fragment_label"
        tools:layout="@layout/registration_fragment"
        >
        <action
            android:id="@+id/action_RegistrationFragment_to_LoginFragment"
            app:destination="@id/LoginFragment"
            />
    </fragment>

    <fragment
        android:id="@+id/LoginFragment"
        android:name="hu.unimiskolc.iit.mobile.carnotify.fragment.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/login_fragment"
    >
        <action
            android:id="@+id/action_LoginFragment_to_MyCarsFragment"
            app:destination="@id/MyCarsFragment"
        />

        <action
            android:id="@+id/action_LoginFragment_to_RegistrationFragment"
            app:destination="@id/RegistrationFragment"
        />
    </fragment>

    <fragment
        android:id="@+id/CarFragment"
        android:name="hu.unimiskolc.iit.mobile.carnotify.fragment.CarFragment"
        android:label="@string/car_fragment_label"
        tools:layout="@layout/car_fragment"
    >
        <argument
            android:name="user"
            app:argType="hu.unimiskolc.iit.mobile.core.domain.User" />
    </fragment>

    <fragment
        android:id="@+id/MyCarsFragment"
        android:name="hu.unimiskolc.iit.mobile.carnotify.fragment.MyCarsFragment"
        android:label="@string/my_cars_fragment_label"
        tools:layout="@layout/my_cars_fragment"
    >
        <argument
            android:name="user"
            app:argType="hu.unimiskolc.iit.mobile.core.domain.User" />

        <action
            android:id="@+id/action_MyCarsFragment_to_AddCarFragment"
            app:destination="@id/AddCarFragment"
        />

        <action
            android:id="@+id/action_MyCarsFragment_to_CarFragment"
            app:destination="@id/CarFragment"
        />
    </fragment>

    <fragment
        android:id="@+id/AddCarFragment"
        android:name="hu.unimiskolc.iit.mobile.carnotify.fragment.AddCarFragment"
        android:label="@string/add_car_fragment_label"
        tools:layout="@layout/add_car_fragment"
    >
        <argument
            android:name="user"
            app:argType="hu.unimiskolc.iit.mobile.core.domain.User" />

        <action
            android:id="@+id/action_AddCarFragment_to_MyCarsFragment"
            app:destination="@id/MyCarsFragment"
        />
    </fragment>
</navigation>