<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
>
  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center" >
    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:contentDescription="@string/car_image" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

      <TextView
          android:id="@+id/title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/car_type_placeholder"
          android:textStyle="bold"
          android:layout_marginStart="15dp"
          android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

      <TextView
          android:id="@+id/description"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/car_license_plate_placeholder"
          android:layout_marginStart="15dp"
          android:layout_marginTop="5dp"
          android:textSize="16sp"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/removeCarButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="20dp"
        app:srcCompat="@drawable/baseline_delete_black_48"
        android:scaleType="fitCenter"
        android:background="@null"
        android:longClickable="true"
        app:tint="@color/purple_500"
        />
  </LinearLayout>
</LinearLayout>