<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:padding="12dp"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:id="@+id/upload_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/upload_icon_round"
            android:contentDescription="@string/car_image_upload_placeholder"
        />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:text="@string/car_image_upload_placeholder"
            android:textAlignment="center"
            android:textSize="18sp"
        />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <EditText
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="name"
            android:hint="@string/car_type_placeholder"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@id/lastInspection"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="parent"
            />

        <EditText
            android:id="@+id/lastInspection"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="name"
            android:hint="@string/car_last_inspection_placeholder"
            android:inputType="date"
            app:layout_constraintBottom_toTopOf="@id/licensePlate"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            />

        <EditText
            android:id="@+id/licensePlate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="name"
            android:hint="@string/car_license_plate_placeholder"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@id/cylinderCapacity"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            />

        <EditText
            android:id="@+id/cylinderCapacity"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="name"
            android:hint="@string/car_cylinder_capacity_placeholder"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@id/enginePower"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            />

        <EditText
            android:id="@+id/enginePower"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="name"
            android:hint="@string/car_cylinder_capacity_placeholder"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@id/horsepower"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            />

        <EditText
            android:id="@+id/horsepower"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="name"
            android:hint="@string/car_cylinder_capacity_placeholder"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@id/totalMass"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            />

        <EditText
            android:id="@+id/totalMass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="name"
            android:hint="@string/car_cylinder_capacity_placeholder"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@id/ownMass"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            />

        <EditText
            android:id="@+id/ownMass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="name"
            android:hint="@string/car_cylinder_capacity_placeholder"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@id/propellant"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            />

        <Spinner
            android:id="@+id/propellant"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@+id/ownMass"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/main_color"
        android:backgroundTint="@color/main_color"
        android:text="@string/registration_btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>